--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="containter">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-md-12">
             <div class="paginate">
 
 <!-- must add | offset: 1 to for loop to add latest post
@@ -25,7 +25,7 @@ layout: default
     {% assign loopindex = forloop.index | modulo: 2 %}
     {% if loopindex == 1 %}
     <div class="row no-gutter">
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="paginator-left">
                 <h4><a href="{{ post.url }}"><b>{{ post.title }}</b></a></h4>
                 <p><span class="date">{{ post.date | date: "%Y-%m" }}</span></p>
@@ -33,7 +33,7 @@ layout: default
             </div>
         </div>
         {% else %}
-        <div class="col-sm-6">
+        <div class="col-md-6">
             <div class="paginator-right">
                 <h4><a href="{{ post.url }}"><b>{{ post.title }}</b></a></h4>
                 <p><span class="date">{{ post.date | date: "%Y-%m" }}</span></p>
