Added image support to paginate

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@ layout: default
 
 <div class="page">
     <div class="home-paginate">
-        {% for post in paginator.posts %}
-        <a href="{{ post.url }}" class="paginator-post">
-            <h4>{{ post.title }}</h4>
-            <p><span class="date">{{ post.date | date: "%B %Y" }} &minus; </span></p>
-            <p><span class="description">{{ post.excerpt | strip_html }}</span></p>
+    {% for post in paginator.posts %}
+        {% if post.image %}
+        <a href="{{ post.url }}" class="paginator-image">
+            <img class="image" alt="image" src="{{ post.image }}" title="{{ post.title }}">
+            <p class="title">{{ post.title }}</p>
         </a>
-        {% endfor %}
+        {% else %}
+        <a href="{{ post.url }}" class="paginator-post">
+            <p class="title">{{ post.title }}</p>
+            <p class="date">{{ post.date | date: "%B %Y" }} &minus;</p>
+            <p class="description">{{ post.excerpt | strip_html }}</p>
+        </a>
+        {% endif %}
+    {% endfor %}
     </div>
     <a class="more" href="archive/index.html">More Posts</a>
 </div>
