--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page">
+<div class="page" id="top">
     <div class="home-paginate">
     {% for post in paginator.posts %}
         {% if post.image %}
