fixed font issues with resume

--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ title: Resume
 		</div>
 		<img class="photo" src="../img/nishant_sinha1.jpg"/>
 	</div>
-	<div class="top-wrapper">
+	<div class="top-wrapper flex2">
 		<div class="left flex1">
 			<div id="education" class="common-attributes purple-bg">
 				<h3>EDUCATION</h3>
@@ -90,9 +90,20 @@ title: Resume
 						<b>hackGSU Fall 2016</b>
 					</p>
 					<p>
-						Made use of Arduino and Bluetooth to automatically log-in employees based on their cellphone’s unique Bluetooth ID number. Designed the interface using HTML5, SASS. Mustache, and Javascript. Project also used MySQL, PHP, and Apache2.
+						Made use of Arduino and Bluetooth to automatically log-in employees based on their cellphone’s unique Bluetooth ID number. Designed interface using HTML5, SCSS, Mustache, and Javascript. Project also used MySQL, PHP, and Apache
 					</p>
 				</div>
+				<!-- <div class="item1">
+					<p>
+						<b>Netflix Challenge</b>
+					</p>
+					<p>
+						<b>Fall 2016</b>
+					</p>
+					<p>
+						Attempted the Netflix Prize using Python 3. Final attempt resulted in an RMSE of .9962.
+					</p>
+				</div> -->
 			</div>
 		</div>
 		<div class="right flex1">
@@ -169,7 +180,7 @@ title: Resume
 			</div>
 		</div>
 	</div>
-	<div class="bottom-wrapper">
+	<div class="bottom-wrapper flex2">
 		<div id="languages" class="white-bg">
 			<h4>LANGUAGES</h4>
 			<div class="item3">
