--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         </a>
         {% else if post.video %}
         <a href="{{ post.url }}" class="paginator-image">
-            <video preload="auto" autoplay="autoplay" loop="loop" style="width: 100%; margin-bottom: -300px; padding-bottom: 150px;">
+            <video preload="auto" autoplay="autoplay" loop="loop" style="width: 100%; height: auto;">
                 <source src="{{ post.video }}" type="video/mp4">
             </video>
             <p class="title">{{ post.title }}</p>
