Change pagination to sort by category & tag.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,5 @@ layout: homepage
 ---
 
 <div class="page" id="top">
-    {% include originals.html %}
-    {% include resources.html %}
-
+    {% include homepage-pagination.html %}
 </div>
