Refactor HTML templates.

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,4 @@
 ---
-layout: resume
-title: Resume
+layout: default
+title: default
 ---
-
-<img src="https://raw.githubusercontent.com/Nishnha/resume/master/src/img/resume.png" width="100%" height="100%" border="1px black"></img>
