--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 ---
-layout: homepage
+layout: default
 ---
-
-<div class="page" id="top">
-    {% include homepage-pagination.html %}
-</div>
+{% include homepage.html %}
